[package]
name = "coprelos"
version = "0.1.0"
edition = "2021"

[dependencies]
openff-toolkit = { path = "openff-toolkit" }
openff-qcsubmit = { path = "openff-qcsubmit" }
qcportal = { path = "qcportal" }

[workspace]
members = [
"openff-interchange",
"openff-qcsubmit",
"openff-toolkit",
"openff-units",
"openmm",
"qcportal",
"utils"
]
resolver = "2"
