[package]
name = "openff-qcsubmit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qcportal = { path = "../qcportal" }
utils = { path = "../utils" }
openff-toolkit = { path = "../openff-toolkit" }

[dependencies.pyo3]
version = "0.20.1"
features = ["auto-initialize"]